feat: add register user, active user handler and sending activation email
